# model-and-harness-test

./: README.md
yt-transcript-app/: README.md  deploy.sh
yt-transcript-app/backend/: Dockerfile  migrate_cache_to_sqlite.py  pyproject.toml  requirements.txt  run.py
yt-transcript-app/backend/app/: config.py  main.py
yt-transcript-app/backend/app/routers/: videos.py
yt-transcript-app/backend/app/schemas/: video.py
yt-transcript-app/backend/app/services/: cache.py  database.py  youtube.py
yt-transcript-app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
yt-transcript-app/frontend/src/: App.tsx  index.css
yt-transcript-app/frontend/src/api/: client.ts
yt-transcript-app/frontend/src/components/: LoadingSpinner.tsx  Modal.tsx  SearchBar.tsx  TranscriptViewer.tsx  VideoCard.tsx
yt-transcript-app/frontend/src/hooks/: useVideos.ts
yt-transcript-app/frontend/src/types/: video.ts
